# ossfortress

./: .gitignore  CONTRIBUTING.md  Dockerfile.portrait  README.md  app.py  docker-compose.yaml  pyproject.toml
.github/workflows/: analysis-infra-smoke-test.yml  ghcr-publish.yml  portrait-ghcr-publish.yml
diagrams/: exports
diagrams/projects/: analysis-infra.mmd  sdlc.mmd  ubuntu-portrait.mmd
generate_recovery_token/: generate_recovery_token.c
others/: threat-model.json
others/diagrams/: README.md  export-diagrams.sh  exports
pages/: index.html  recovery.html
portrait/: Dockerfile  app.py  confinement.py  image_ops.py  os_ops.py  pyproject.toml  recovery.py  uploader.py
portrait/c_modules/: generate_recovery_token.c  test.c  test.elf
portrait/pages/: dashboard.html  recovery.html  utilities.html
portrait/portrait/: app.py  confinement.py  os_ops.py
portrait/portrait/c_modules/: Makefile  generate_recovery_token.c  generate_recovery_token.h  sha256.c  test.elf
portrait/portrait/pages/: dashboard.html  index.html  recovery.html
presentation/: project.md
presentation/defcamp-23/: project.md
presentation/ubuntu-summit-23/: project.md
sandcastle/: Dockerfile  pyproject.toml
sandcastle/sandcastle/: app.py  os_ops.py  recovery.py  uploader.py
sandcastle/sandcastle/c_modules/: generate_recovery_token.c  test.elf
sandcastle/sandcastle/pages/: dashboard.html  index.html  recovery.html  utilities.html
scanning-configs/: gitleaks.toml  osv-scanner.conf
solutions/: threat-model.json
wiki/: docusaurus.config.js  package-lock.json  package.json
(+109 files in other folders)
